--- a/Raspberry-Pi/code/WebRpi/templates/index.html
+++ b/Raspberry-Pi/code/WebRpi/templates/index.html
@@ -173,7 +173,7 @@
                     var mem=data.mem;
                     var ul=$("<ul></ul>");
                     for (var i = 0; i < mem.length; i++) {
-                        ul.append("总交换分区: <span>"+mem[i].total+"</span>MiB<br>");
+                        ul.append("总物理内存: <span>"+mem[i].total+"</span>MiB<br>");
                         ul.append("已用百分比: <span>"+mem[i].percent+"</span>%<br>");
                         ul.append("已用: <span>"+mem[i].used+"</span>MiB<br>");
                         ul.append("可用: <span>"+mem[i].available+"</span>MiB<br>");
@@ -195,7 +195,7 @@
                             var mem=data.mem;
                             var ul=$("<ul></ul>");
                             for (var i = 0; i < mem.length; i++) {
-                                ul.append("总交换分区: <span>"+mem[i].total+"</span>MiB<br>");
+                                ul.append("总物理内存: <span>"+mem[i].total+"</span>MiB<br>");
                                 ul.append("已用百分比: <span>"+mem[i].percent+"</span>%<br>");
                                 ul.append("已用: <span>"+mem[i].used+"</span>MiB<br>");
                                 ul.append("可用: <span>"+mem[i].available+"</span>MiB<br>");
