js保存到本地

--- a/Raspberry-Pi/code/WebRpi/templates/index.html
+++ b/Raspberry-Pi/code/WebRpi/templates/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <script src = "https://apps.bdimg.com/libs/jquery/2.1.4/jquery.js" charset = "utf-8"></script>
+        <script src = "{{ url_for('static',filename='js/jquery-2.1.4.js') }}" charset = "utf-8"></script>
 
         <!-- [> [> [> [> [> [> UPS信息 <] <] <] <] <] <] -->
         <p style = "width: 100%; display: block;">UPS监控:&nbsp&nbsp&nbsp<button id = "ViewUps"></button>&nbsp&nbsp&nbsp<button id = "RefreshUPS">Refresh</button></p>
